data/all_generated_tests/raw_wast_tests/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3856.wast
;; 5. **Cross-Module Calls with Varied Stack Depth**:    - **Reasoning**: This test checks the resilience of handling control flow when there are significant variations in stack depth due to cross-module calls.    - **Description**: Create multiple modules with deeply nested function calls, including calls to imported functions that affect stack depth significantly. Validate that stack depth adjustments are correctly managed between the modules.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (import "mod1" "func1" (func $func1 (type 0)))
    (func $deepNestedCall
      (call $func1 (i32.const 42))
      (call $func1 (i32.const 42))
      (call 0 (i32.const 42))
    )
  )
  "type mismatch"
)